<resources>
    <string name="app_name">Rydar</string>
    <string name="intro_text_helper">Hop in for an adventurous ride!</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_ibrahim">Hello Ibrahim</string>
    <string name="where_are_you_going_to">Where are you going to?</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_location_rationale">We need your permission to access your location</string>
    <string name="permission_location_denied">Ooops! We would not be able to get your location</string>
    <string name="permission_location_never_ask_again">Permission Never Asked</string>
    <string name="want_better_pickups">Want Better Pickups?</string>
    <string name="share_your_location"><![CDATA[Share your location →]]></string>
    <string name="do_you_know_that">Do you know that…</string>
    <string name="you_are_awesome">You are awesome</string>
    <string name="current_position">Your Current Location</string>
    <string name="grant_permission">Permission Needed</string>
    <string name="we_cant_get_your_location">Sorry! We cannot get your location</string>
    <string name="good_day">Good Day!</string>
    <string name="app_developed_by">This app was developed by Inuwa Ibrahim (ibrajix)</string>
    <string name="email">Email</string>
    <string name="twitter">Twitter</string>
    <string name="where_to">Where to?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="something_went_wrong">Ooops, something went wrong!</string>
    <string name="not_connected_to_internet">You are not connected, enable data connection and try again</string>
    <string name="your_ride">Your Ride</string>
    <string name="select_your_preferred_ride">Select your preferred ride</string>
    <string name="normal">Normal</string>
    <string name="time">10:25pm</string>
    <string name="price">₦ 1,000</string>
    <string name="price_premium">₦ 5,000</string>
    <string name="premium">Premium</string>
    <string name="confirm">Confirm</string>
</resources>