<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/app_developed_by"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/ic_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/email"
        android:src="@drawable/ic_gmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView25"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ic_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/twitter"
        android:src="@drawable/ic_twitter"
        app:layout_constraintBottom_toBottomOf="@+id/ic_email"
        app:layout_constraintEnd_toStartOf="@+id/ic_web"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toEndOf="@+id/ic_email"
        app:layout_constraintTop_toTopOf="@+id/ic_email"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ic_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/twitter"
        android:src="@drawable/ic_web"
        app:layout_constraintBottom_toBottomOf="@+id/ic_email"
        app:layout_constraintEnd_toEndOf="@+id/textView25"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toEndOf="@+id/ic_email"
        app:layout_constraintTop_toTopOf="@+id/ic_email"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>